--- a/src/main/resources/web/ylt/index.html
+++ b/src/main/resources/web/ylt/index.html
@@ -118,6 +118,7 @@
 
         <div id="yesLogin" class="col-md-4 top-forms mt-md-3 mt-2 mb-md-0 mb-3">
             <div class="btn-group">
+                <i class="vip-icon"></i>
                 <button id="nameSpan" style="color:#fff" type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <!--<i id="ordinaryCard" class="fa fa-user"></i><i id="goldCard" class="fa fa-get-pocket"></i>-->
                     <i id="ordinaryCard" class="base-icon ordinary-card"></i><i id="goldCard" class="base-icon gold-card"></i>
